--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
+        <base href="/firebase-test/">
 		<title>Document</title>
 		<link src="bower_components/angular-material/angular-material.css">
 
 		<script src="bower_components/angular/angular.js"></script>
+		<script src="bower_components/angular-route/angular-route.js"></script>
 		<script src="bower_components/angular-animate/angular-animate.js"></script>
 		<script src="bower_components/angular-aria/angular-aria.js"></script>
 		<script src="bower_components/angular-material/angular-material.js"></script>
@@ -14,12 +16,16 @@
 		<script src="main.js"></script>
 	</head>
 	
-	<body ng-app="angularApp" ng-controller="mainCtrl">
+	<body ng-app="angularApp" ng-controller="mainCtrl as main">
 		{{ welcome }}
 		
 		<ul>
 			<li ng-repeat="m in messages">{{ m.msg }}</li>
 		</ul>
+		
+		ng-view:
+		
+		<div ng-view></div>
 	</body>
 
 </html>
