--- a/index.html
+++ b/index.html
@@ -1,31 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-        <base href="/firebase-test/">
-		<title>Document</title>
-		<link src="bower_components/angular-material/angular-material.css">
 
-		<script src="bower_components/angular/angular.js"></script>
-		<script src="bower_components/angular-route/angular-route.js"></script>
-		<script src="bower_components/angular-animate/angular-animate.js"></script>
-		<script src="bower_components/angular-aria/angular-aria.js"></script>
-		<script src="bower_components/angular-material/angular-material.js"></script>
-		<script src="bower_components/firebase/firebase.js"></script>
-		<script src="bower_components/angularfire/dist/angularfire.js"></script>
-		<script src="main.js"></script>
-	</head>
-	
-	<body ng-app="angularApp" ng-controller="mainCtrl as main">
-		{{ welcome }}
-		
-		<ul>
-			<li ng-repeat="m in messages">{{ m.msg }}</li>
-		</ul>
-		
-		ng-view:
-		
-		<div ng-view></div>
-	</body>
+<head>
+    <meta charset="UTF-8">
+    <base href="/firebase-test/">
+    <title>Document</title>
+    <link src="bower_components/angular-material/angular-material.css" />
+
+    <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/angular-animate/angular-animate.js"></script>
+    <script src="bower_components/angular-aria/angular-aria.js"></script>
+    <script src="bower_components/angular-material/angular-material.js"></script>
+    <script src="bower_components/firebase/firebase.js"></script>
+    <script src="bower_components/angularfire/dist/angularfire.js"></script>
+    <script src="main.js"></script>
+</head>
+
+<body ng-app="angularApp" ng-controller="mainCtrl as main">
+        {{ welcome }}
+
+        <ul>
+            <li ng-repeat="m in messages">{{ m.msg }}</li>
+        </ul>
+    <md-content>
+        <md-button class="md-raised md-primary" ng-click="login()">Login</md-button>
+        <md-button class="md-raised md-primary" ng-click="logout()">Logout</md-button>
+    </md-content>
+        hello:
+        {{ authData.facebook.displayName }}
+        <img ng-src="{{authData.facebook.cachedUserProfile.picture.data.url}}" alt="">
+       
+        ng-view:
+
+        <div ng-view></div>
+</body>
 
 </html>
+
+
+
+
+
+
